other/e-l/ensure-probes-different/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: ensure-probes-different
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../ensure-probes-different.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: podcontrollers-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: podcontrollers-bad.yaml
    finally:
    - sleep:
        duration: 5s
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: validate-probes
    - command:
        args:
        - delete
        - all
        - --all
        - --force
        - --grace-period=0
        - -n
        - ensure-probes-different-ns
        entrypoint: kubectl
